--- a/app/styles/matchy.css
+++ b/app/styles/matchy.css
@@ -17,23 +17,22 @@ h1 {
 #stats {
 	margin:0 auto;
 	padding:5px;
-	/*width:380px;*/
+    width:850px;
 	height:24px;
 	border-radius:10px;
 	border:2px solid #ffffff;
-	/*background:url(../images/game-bkg1.png);*/
 	font-size:1.2em;
 	color:#ffffff;
 	margin-bottom:10px;
-	font-family: 'Georgia', serif
 	}
+
 #stats span {
 	font-weight:bold
 	}
 
 #game {
     border-radius: 10px;
-    border: 1px solid #666666;
+    /*border: 1px solid #666666;*/
     -webkit-box-shadow: 0 -1px 0 #999999, 0 1px 0 #999999, inset 0 1px 6px #000000;
     -moz-box-shadow: 0 -1px 0 #999999, 0 1px 0 #999999, inset 0 1px 6px #000000;
     -o-box-shadow: 0 -1px 0 #999999, 0 1px 0 #999999, inset 0 1px 6px #000000;
@@ -41,34 +40,17 @@ h1 {
     box-shadow: 0 -1px 0 #999999, 0 1px 0 #999999, inset 0 1px 6px #000000;
     
     position: relative;
-    width: 800px;
+    width: 850px;
+    height:374px;
     margin: 0 auto;
-    display: -webkit-box;
-    -webkit-box-pack: center;
-    -webkit-box-align: center;
-    
-    display: -moz-box;
-    -moz-box-pack: center;
-    -moz-box-align: center;
-    
-    display: -o-box;
-    -o-box-pack: center;
-    -o-box-align: center;
-
-    display: -ms-box;
-    -ms-box-pack: center;
-    -ms-box-align: center;
-
-    display: box;
-    box-pack: center;
-    box-align: center;
 }
+
 
 #cards {
     position: relative;    
-    width: 800px;
+    width: 100%;
     height: 100%;
-    margin:0 auto;
+    margin:0 auto 0 auto;
 }
 
 .card {
