--- a/app/styles/compass_twitter_bootstrap/_type.scss
+++ b/app/styles/compass_twitter_bootstrap/_type.scss
@@ -72,7 +72,7 @@ h4 small { font-size: 14px; }
 .page-header {
   padding-bottom: ($baseLineHeight / 2) - 1;
   margin: $baseLineHeight 0 ($baseLineHeight * 1.5);
-  border-bottom: 1px solid $grayLighter;
+  border-bottom: 5px solid $pink;
 }
 
 
