--- a/app/styles/compass_twitter_bootstrap/_variables.scss
+++ b/app/styles/compass_twitter_bootstrap/_variables.scss
@@ -7,6 +7,7 @@
 // --------------------------------------------------
 
 
+
 // Grays
 // -------------------------
 $black:                 #000 !default;
@@ -33,7 +34,7 @@ $purple:                #7a43b6 !default;
 // Scaffolding
 // -------------------------
 $bodyBackground:        $white !default;
-$textColor:             $grayDark !default;
+$textColor:             $pink !default;
 
 
 // Links
