added passport logic to level 1

--- a/app/styles/compass_twitter_bootstrap/_variables.scss
+++ b/app/styles/compass_twitter_bootstrap/_variables.scss
@@ -33,7 +33,7 @@ $purple:                #7a43b6 !default;
 
 // Scaffolding
 // -------------------------
-$bodyBackground:        $white !default;
+$bodyBackground:        $gray !default;
 $textColor:             $pink !default;
 
 
